--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "@types/three": "^0.180.0",
+    "ammo.js": "^0.0.10",
     "express": "^5.1.0",
     "three": "^0.180.0"
   }
